# afrourban

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.local.yml  manage.py  organization-profiles-spec.md  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
afrourban/: __init__.py  api_governance.py  api_schema.py  celery.py  exceptions.py  urls.py  wsgi.py
afrourban/settings/: base.py  dev.py  local.py  secrets.py  test.py
docs/api/: README.md  deprecations.md  (+4 more)
events/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
frontend/: .env.example  Dockerfile.local  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
guide/: COMPONENT_GUIDE.md  FRONTEND_DESIGN_SYSTEM.md  README.md  RECIPES.md
health/: __init__.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
organizations/: __init__.py  admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
profiles/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
tests/: __init__.py  test_pre_commit_config.py
users/: admin.py  apps.py  claims.py  conf.py  managers.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
(+190 files in other folders)
